--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="splash">
         <div class="splash-title-container">
-            <h3 class="splash-title">STUDIO-LAVEAU®</h3>
+            <h3 class="splash-title">THINGS-TO-COME®</h3>
         </div>
     </div>
 
